changed the flash message conatiner to be position stick AND absolue to prevent it from shifting divs in viewport. Also, added a conditional in Tracks to check to see if someone clicked on the same track twice, and if so, don't show the spinning icon

--- a/Frontend/src/App.css
+++ b/Frontend/src/App.css
@@ -219,6 +219,7 @@ flex: 0.1 0 1vh;
 /* //////////////////////////////////////  FLASH MESSAGE  ////////////////////////////////////// */
 
 .Flash-Messages-Container {
+  position: absolute;
   position: sticky;
   top: 0;
   z-index: 6;
